frontier-enterprise/k8s/service.yaml
# Copyright (c) 2026 Terrell Hall / TrueElitze Digital. All rights reserved.
apiVersion: v1
kind: Service
metadata:
  name: Frontier-enterprise
  labels:
    app: Frontier-enterprise
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: Frontier-enterprise
